force-app/main/default/objects/Apttus_Config2__SettingGroup__c/Apttus_Config2__SettingGroup__c.object-meta.xml
<CustomObject>
    <description>Object to group settings into logical sets.</description>
    <label>Setting Group</label>
    <nameField>
        <label>Setting Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setting Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>