force-app/main/default/objects/Apttus_Config2__SettingGroup__c/fields/Apttus_Config2__ApplicationFeatureId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ApplicationFeatureId__c</fullName>
    <description>Application feature with which this setting group is associated</description>
    <inlineHelpText>Application feature with which this setting group is associated</inlineHelpText>
    <label>Application Feature</label>
    <referenceTo>Apttus_Config2__ApplicationFeature__c</referenceTo>
    <relationshipLabel>Setting Groups</relationshipLabel>
    <relationshipName>Setting_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>