force-app/main/default/objects/Apttus_Config2__SettingGroup__c/fields/Apttus_Config2__ConfigFlow__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigFlow__c</fullName>
    <description>Associated flow for this group of settings</description>
    <inlineHelpText>Associated flow for this group of settings</inlineHelpText>
    <label>Config Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>