force-app/main/default/objects/Apttus_Config2__SettingGroup__c/fields/Apttus_Config2__DisplayType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayType__c</fullName>
    <description>display type of the setting group such as List, Actions, Columns or Field Set</description>
    <inlineHelpText>display type of the setting group such as List, Actions, Columns or Field Set</inlineHelpText>
    <label>Display Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
                <default>true</default>
                <label>List</label>
            </value>
            <value>
                <fullName>Actions</fullName>
            </value>
            <value>
                <fullName>Columns</fullName>
            </value>
            <value>
                <fullName>Field Set</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>