force-app/main/default/objects/Apttus_Config2__SettingGroup__c/fields/Apttus_Config2__ExternalApplicationFeatureId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExternalApplicationFeatureId__c</fullName>
    <description>External Id pointing to the ApplicationFeature__c original parent record</description>
    <inlineHelpText>External Id pointing to the ApplicationFeature__c original parent record</inlineHelpText>
    <label>ExternalApplicationFeatureId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>