force-app/main/default/objects/Apttus_Config2__SettingGroup__c/fields/Apttus_Config2__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExternalId__c</fullName>
    <description>External Id pointing to the original SettingGroup__c record</description>
    <inlineHelpText>External Id pointing to the original SettingGroup__c record</inlineHelpText>
    <label>ExternalId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>