force-app/main/default/objects/Apttus_Config2__SettingGroup__c/fields/Apttus_Config2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Sequence__c</fullName>
    <description>Sequence of settings group</description>
    <inlineHelpText>Sequence of settings group</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>